--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<!-- Video by Oleg Gamulinskii from Pexels: https://www.pexels.com/video/shades-of-lights-in-the-outer-space-2611250/ -->
-		<video src="img/background.mp4" muted autoplay loop></video>
+		<video src="img/background.mp4" playsinline muted autoplay loop></video>
 		<section class="container">
 			<div class="horoscope">
 				<img src="img/wheel.svg" alt="zodiac-wheel" class="zodiac">
